--- a/gb/23/9/12/n14072205.md
+++ b/gb/23/9/12/n14072205.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>光疗法真能帮助对抗痴呆症？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14072207-Monika-Wisniewska-Shutterstock-1200x801-600x400.jpeg" />
 <h6>一些最新的研究显示，光疗法或许是一种既重要又安全的疗法，可以改善痴呆症患者的认知能力和生活质量。（Shutterstock）
 </h6>
 <hr>
-<p>神经退行性疾病，如<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%97%B4%E5%91%86%E7%97%87.md#1">痴呆症</a>和阿兹海默症，会严重损害人的认知能力和生活品质，而且目前仍没有有效的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%BB%E7%96%97.md#1">治疗</a>药物。好消息是，科学家正在寻找一些可延缓病情恶化，或减轻症状的新方法，而<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%89%E7%96%97%E6%B3%95.md#1">光疗法</a>便是一种有前景的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%BB%E7%96%97.md#1">治疗</a>方式。</p>
+<p>神经退行性疾病，如痴呆症和阿兹海默症，会严重损害人的认知能力和生活品质，而且目前仍没有有效的治疗药物。好消息是，科学家正在寻找一些可延缓病情恶化，或减轻症状的新方法，而光疗法便是一种有前景的治疗方式。</p>
 <h2><span style="color: #008000;">光可治愈疾病</span></h2>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%89%E7%96%97%E6%B3%95.md#1">光疗法</a>，又称光生物调节或光治疗，是利用特定波长的光来刺激身体内的细胞。《大脑与行为》杂志于2023年4月号发表的一项<ahref="https://onlinelibrary.wiley.com/doi/10.1002/brb3.2952" target="_blank" rel="noopener noreferrer">荟萃??分析</a>研究，分析了12项随机对照试验，结果显示，光疗“可能是最有效的非药物干预的方法之一，可以改善<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%97%B4%E5%91%86%E7%97%87.md#1">痴呆症</a>的核心症状。”</p>
+<p>光疗法，又称光生物调节或光治疗，是利用特定波长的光来刺激身体内的细胞。《大脑与行为》杂志于2023年4月号发表的一项<ahref="https://onlinelibrary.wiley.com/doi/10.1002/brb3.2952" target="_blank" rel="noopener noreferrer">荟萃??分析</a>研究，分析了12项随机对照试验，结果显示，光疗“可能是最有效的非药物干预的方法之一，可以改善痴呆症的核心症状。”</p>
 <p>这些试验涉及了患不同类型痴呆症的老年人，包括阿兹海默症、血管性痴呆、路易体痴呆、帕金森氏症，以及混合型、其它原因的痴呆疾病。</p>
 <p>伊莎贝拉·帕克（）博士是诺斯韦尔长岛犹太森林山医院（Northwell Long Island Jewish Forest Hills）的医疗副主任和老年医学与姑息疗法（palliative care）主任，她在接受大纪元采访时表示，这些研究表明，光疗可以显着提高痴呆症患者的认知功能，包括记忆、注意和执行功能。</p>
 <p>她说：“无论是在短期还是长期的干预中，都能看到积极的效果。”但她也提醒说，光疗不应该取代其它痴呆症治疗方法，例如药物治疗和行为治疗。</p>
@@ -23,7 +23,7 @@
 <p>在这项研究中，90名年龄在18岁至25岁之间的男女志愿者接受了波长为1064nm的激光束照射治疗，照射他们右侧或左侧脑前额皮质位置的头皮。他们也接受了安慰剂治疗，以确保观察到的效果是由光源引起的。</p>
 <p>在治疗12分钟后，志愿者进行了记忆测试。与没有接受治疗的人相比，接受治疗的人的记忆力有明显改善。</p>
 <p>最新的一项系统的研究<ahref="https://alz-journals.onlinelibrary.wiley.com/doi/full/10.1002/trc2.12249" target="_blank" rel="noopener noreferrer">综述</a>显示，将tPBM与特定波长的视觉刺激（VS）结合使用效果明显。</p>
-<p>实验论文作者写道：“目前进行的人体实验支持使用40Hz 810-870 nm光脉冲的PBM来增强老年人和AD<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E5%B0%94%E8%8C%A8%E6%B5%B7%E9%BB%98%E6%B0%8F%E7%97%87.md#1">阿尔茨海默氏症</a>）患者的大脑连接和记忆，而40Hz VS似乎可以改善人类的认知能力。”</p>
+<p>实验论文作者写道：“目前进行的人体实验支持使用40Hz 810-870 nm光脉冲的PBM来增强老年人和AD（阿尔茨海默氏症）患者的大脑连接和记忆，而40Hz VS似乎可以改善人类的认知能力。”</p>
 <h2><span style="color: #008000;">强光疗法疗效显着</span></h2>
 <p>一种正在研究的光疗法是强光疗法，这是一种每天让人们暴露在强光下一段时间的治疗方法。</p>
 <p>强光疗法主要用于治疗季节性情绪失调，但有一项<ahref="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8394855/" target="_blank" rel="noopener noreferrer">研究</a>?显示，它也可能对痴呆症患者的认知功能有好处。该研究论文的作者发现，30分钟的强光疗法“产生令人鼓舞的结果，并对情感、激活水平、血氧饱和度和心率产生立竿见影的积极影响。”</p>
@@ -36,52 +36,41 @@
 <p>虽然光疗对于某些人来说可能是一个可行的方案，但在做出任何治疗决定之前，需要权衡潜在的益处和风险，例如，如果在错误的时间使用，可能会引起皮肤敏感和睡眠问题。我们希望通过持续的研究和创新，能开发出新的治疗方法，改善神经退行性疾病患者的生活。</p>
 <p><em>英文报导请见《大纪元时报》：<span style="color: #188638;"><a style="color: #188638;" href="https://www.theepochtimes.com/health/can-exposure-to-light-help-fight-dementia-5222982">Can Exposure to Light Help Fight Dementia？</a></span>。</em></p>
 <p>责任编辑：李佳◇</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/30/n13985173.md#1">喝水能防痴呆？你的大脑一天需要这些水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/25/n14022368.md#1">防失智饮食重点公开！补充这些营养素远离痴呆症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049542.md#1">研究发现新方法 或可逆转早期和轻度痴呆症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067515.md#1">便秘会让人失去认知、变痴呆？研究：预防很重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061511.md#1">忧郁症是心灵感冒 中医师建议从三方面入手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075086.md#1">他汀药物具鲜为人知危险  1种维生素可完美代替</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070034.md#1">喝咖啡或致胆固醇超标 研究发现1喝法最健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062107.md#1">芬太尼2毫克就致命！如何远离毒品危害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055130.md#1">科学前沿的发现：水的神奇特性与顺势疗法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/30/n13985173.md#1">喝水能防痴呆？你的大脑一天需要这些水</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/25/n14022368.md#1">防失智饮食重点公开！补充这些营养素远离痴呆症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/7/n14049542.md#1">研究发现新方法 或可逆转早期和轻度痴呆症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/5/n14067515.md#1">便秘会让人失去认知、变痴呆？研究：预防很重要</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300384.md#1">氢气疗法助抗炎抗癌  整体改善生活品质</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14272955.md#1">改善“粒线体失衡” 首推Zone2运动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14297076.md#1">不知不觉间一直中毒！生活中恐怖5大慢性中毒源</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296131.md#1">大型研究：每日服复合维生素增加死亡风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293256.md#1">吃碱性食品改善酸性体质？ 营养师澄清迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290621.md#1">怎么睡都睡不饱？中医解方消三大类疲劳</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/16/n10222351.md#1" target="_blank">还原真实的中共：共产党大力拥护民主！？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/24/n10424628.md#1" target="_blank">一位女商人的自白 她曾为自己准备葬礼</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9844503.md#1" target="_blank">毛泽东诗词的“血旗情结”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078897.md#1">【未解之谜】魏斯博士（上）看到地球未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074471.md#1">仁心君子：救助仇人活命  不爱宰相高位爱真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075537.md#1">秋分：彼岸日 天地阴阳调和</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081108.md#1">【传统音乐】神韵乐团七团 室内乐及独奏音乐会 | 首播：2023年9月30日 晚间8:00</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081138.md#1">【新唐人快报】越南开发稀土矿场 挑战中共垄断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079811.md#1">【中国禁闻】上海疫情升温 医院爆满 小区出入受限</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080182.md#1">中共耗资2千亿办亚运 《杭州，为你羞耻》再传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080303.md#1">世界上最古老的木结构建筑早于人类文明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079877.md#1">邓朴方去职 习近平或对更多太子党开刀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080019.md#1">徐新洋大婚宴开35桌 徐乃麟买单喊话想抱孙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080305.md#1">范冰冰任西班牙影展评审 开幕红毯造型成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080342.md#1">为何不上常驻综艺？刘诗诗回应获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080166.md#1">简廷芮大婚感动洒泪 新郎晒甜蜜：眼里只有她</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080359.md#1">睽违4年返港 吴彦祖自曝遭爱女揶揄不再当红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074775.md#1">他一年甩30公斤 脂肪肝消失 秘诀是吃2种食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061511.md#1">忧郁症是心灵感冒 中医师建议从三方面入手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075086.md#1">他汀药物具鲜为人知危险  1种维生素可完美代替</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079774.md#1">8月全美租金连4降 西部降幅最多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079734.md#1">美国面临缺房危机 后院运动正在兴起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303468.md#1">【思想领袖】中共东进太平洋挑战美国的策略</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306761.md#1">【中国禁闻】巴黎奥运中共乱象多 乒乓女单决赛内斗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305388.md#1">越来越多美国家庭因游览迪士尼而负债</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/12/n14072205.htm">光疗法真能帮助对抗痴呆症？</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072205.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/12/n14072205.htm">光疗法真能帮助对抗痴呆症？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/12/n14072205.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
